--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Star Collector</title>
     <link href="./styles/style.css" rel="stylesheet" type="text/css"/>
     
-
 </head>
 <body>
+
   <div id="canvas-container"> 
-    <canvas id="canvas"></canvas>
+    <canvas id="canvas" width="1000" height="700"></canvas>
   </div>
   <script src="./js/index.js"></script>
+  
 </body>
 </html>
