--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div id="canvas-container"> 
     <canvas id="canvas" width="1000" height="700"></canvas>
   </div>
+  <script src="./js/game.js"></script>
   <script src="./js/index.js"></script>
   
 </body>
