start screen button fixed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body id="container">
-  <div id="start-screen">
+  <div id="start-screen" class="hide">
 
     <img src='./images/logo.png' id="game-logo">
     <p id="slogan">
