--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <img src='./images/logo.png' id="game-logo">
     <p id="slogan">
-      Quantas super estrelas você<br>
-      é capaz de coletar?
+      Colete estrelas e desvie<br>
+      dos meteoros!!!
     </p>
     <button id="start-button">START</button>
 
