--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <img src='./images/logo.png' id="game-logo">
     <p id="slogan">
-      Colete estrelas e desvie<br>
-      dos meteoros!!!
+      How many Super Stars<br>
+      can you collect?
     </p>
     <button id="start-button">START</button>
 
