crashWith function bug fixed

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       How many Super Stars<br>
       can you collect?
     </p>
-    <button id="start-button">START</button>
+    <button id="start-button">PLAY</button>
 
   </div>
 
