--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
     <img src='./images/logo.png' id="game-logo">
     <p id="slogan">
-      How many Super Stars<br>
-      can you collect?
+      Collect the stars<br>
+      Avoid the meteors!!!
+      
     </p>
     <button id="start-button">PLAY</button>
 
