timer bug fixed and game improved

--- a/index.html
+++ b/index.html
@@ -17,13 +17,23 @@
   <div id="start-screen" class="hide">
 
     <img src='./images/logo.png' id="game-logo">
+    
     <p id="slogan">
       Collect the stars<br>
       Avoid the meteors!!!
-      
     </p>
-    <button id="start-button">PLAY</button>
 
+    <p id="press-start">PRESS START</p>
+
+    <!-- <button id="start-button">PLAY</button> -->
+    <div id="instructions-container">
+    <img src='./images/instructions.png' id ='instructions' alt='Arrow Keys illustration'>
+    <p id="instructions-text">Use the Arrow Keys<br>
+      to move around.<br>
+      The Stars add up,<br>
+      but the Meteors<br>
+      deduct points.</p>
+    </div>
   </div>
 
   <div id="canvas-container"> 
