--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       Avoid the meteors!!!
     </p>
 
-    <p id="press-start">PRESS START</p>
+    <p id="press-start">PRESS ENTER</p>
 
     <!-- <button id="start-button">PLAY</button> -->
     <div class="instructions-container">
